# cURL-Share

./: .gitignore  README.md  TODO.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: ticket.md
.github/workflows/: go-lint.yaml  lint-and-test.yaml
backend/: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  go.mod  main.go  main_test.go  sqlx-data.json
backend/migrations/: 20230213114853_tables.sql  20230214083404_test_data.sql
backend/src/: application.rs  helpers.rs  lib.rs  main.rs  models.rs  observability.rs
backend/src/routes/: mod.rs  project.rs  user.rs
backend/src/routes/project/: mod.rs  routes.rs  types.rs
backend/src/routes/user/: mod.rs  routes.rs  types.rs
backend/tests/: health_check.rs  project.rs  user.rs
backend/tests/common/: mod.rs
docs/: user-stories.md
docs/uml/: database-diagram.plantuml
docs/uml/sequence-diagrams/: create-curl-group.plantuml  edit-curl-group.plantuml  home-page.plantuml  project-management.plantuml  project-page.plantuml  signup-and-login.plantuml  view-curl-group.plantuml
frontend/: .env  .env.docker  .eslintrc.cjs  .gitignore  Dockerfile  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/cypress/e2e/: user.cy.ts
frontend/cypress/support/: commands.ts
frontend/src/: app.d.ts  app.html  hooks.server.ts  vite-env.d.ts
frontend/src/lib/: api.page.ts  api.server.ts  api.ts  common.ts  stores.ts  types.ts
frontend/src/lib/components/: AgnosticInput.svelte  CurlGroupForm.svelte  CurlGroupListEntry.svelte  Header.svelte  IconLink.svelte  Meta.svelte  ProjectListEntry.svelte  Search.svelte  VisibilityInput.svelte
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  index.test.ts
frontend/src/routes/log-in/: +page.svelte
frontend/src/routes/log-out/: +page.svelte
frontend/src/routes/project/[slug]/: +page.server.ts  +page.svelte
frontend/src/routes/project/create/: +page.svelte
frontend/src/test/: common.ts
frontend/src/test/components/: AgnosticInput.test.ts  CurlGroupForm.test.ts  CurlGroupListEntry.test.ts  Header.test.ts  IconLink.test.ts  Meta.test.ts  ProjectListEntry.test.ts  Search.test.ts  VisibilityInput.test.ts
frontend/src/test/components/__snapshots__/: Header.test.ts.snap  (+8 more)
frontend/src/test/routes/: index.test.ts  log-in.test.ts  project-create.test.ts  project-page.test.ts  project-settings.test.ts
(+13 files in other folders)
