[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
anyhow = "1.0.69"
config = "0.13.3"
dotenv = "0.15.0"
serde = "1.0.152"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "macros", "sqlite"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
