[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.0"
anyhow = "1.0.69"
argon2 = "0.4.1"
config = "0.13.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
rand_core = { version ="0.6.4", features = ["std"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.152"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "macros", "sqlite"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
